# STRESS

./: STRESS_FRAMEWORK_RESEARCH.md  index.html  pyproject.toml  readme.md
.github/workflows/: benchmark.yml  schema-validate.yml  test.yml
benchmarks/: data.js
docs/: STRESS_v0_Complete_Specification.md  metric-independence.md  specification-v0.2.md  validation-methodology.md
docs/historical/: ocrb-v0.1-deprecated.md
examples/: README.md  hello_benchmark.py
schema/: aggregate.schema.json  manifest.schema.json  run-record.schema.json
stress/: README.md  cli.py  runner.py
stress-ref/: Cargo.toml
stress-ref/src/: runner.rs
stress-ref/src/metrics/: gds.rs  mod.rs  sri.rs  weight_profiles.rs
stress-ref/src/stats/: mod.rs
stress-ref/src/stress/: backend.rs  backend_linux.rs  backend_simulated.rs  backend_stressng.rs  backend_toxiproxy.rs  mod.rs
stress-ref/src/types/: config.rs  events.rs  report.rs
stress/metrics/: gds.py  sri.py
stress/report/: badge.py  html.py  pdf.py  schema.py
stress/report/templates/: report.html
stress/stats/: aggregate.py
stress/stress/: backend.py  backend_linux.py  backend_stressng.py  backend_toxiproxy.py  profiles.py
tests/: README.md
tests/test_metrics/: test_gds.py  test_sri.py
