[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-benchmark"
version = "0.2.0"
description = "STRESS — System Threat Resilience & Extreme Stress Suite"
readme = "readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "STRESS Contributors"},
]
keywords = ["benchmark", "resilience", "stress-testing", "reliability"]
dependencies = []

[project.scripts]
stress-benchmark = "stress.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0"]
stats = ["scipy>=1.7"]
report = ["jinja2>=3.1"]
pdf = ["weasyprint>=60"]
badges = ["pybadges"]
all = ["scipy>=1.7", "jinja2>=3.1", "weasyprint>=60", "pybadges"]

[tool.setuptools.packages.find]
include = ["stress*"]

[tool.setuptools.package-data]
stress = ["report/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
